rounding, little bit of discussion

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -402,6 +402,35 @@
 
 
 
+@article{tarn07,
+	title = {A New Approach to Outcome Prediction in Trauma: A Comparison With the {TRISS} Model},
+	volume = {61},
+	issn = {2163-0755},
+	url = {https://journals.lww.com/jtrauma/Abstract/2006/09000/A_New_Approach_to_Outcome_Prediction_in_Trauma__A.30.aspx},
+	doi = {10.1097/01.ta.0000197175.91116.10},
+	shorttitle = {A New Approach to Outcome Prediction in Trauma},
+	pages = {701--710},
+	number = {3},
+	journaltitle = {Journal of Trauma and Acute Care Surgery},
+	author = {Bouamra, Omar and Wrotchford, Alan and Hollis, Sally and Vail, Andy and Woodford, Maralyn and Lecky, Fiona},
+	urldate = {2022-11-15},
+	date = {2006-09},
+	langid = {american},
+}
+
+@article{brohi16,
+	title = {Survival prediction algorithms miss significant opportunities for improvement if used for case selection in trauma quality improvement programs},
+	volume = {47},
+	issn = {1879-0267},
+	doi = {10.1016/j.injury.2016.05.042},
+	pages = {1960--1965},
+	number = {9},
+	journaltitle = {Injury},
+	shortjournal = {Injury},
+	author = {Heim, Catherine and Cole, Elaine and West, Anita and Tai, Nigel and Brohi, Karim},
+	date = {2016-09},
+	pmid = {27343135},
+}
 
 @online{blank,
   author          = {},
